Fix icon spacing

--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,7 @@
   -webkit-transition: .4s;
   transition: .4s;
   border-radius: 50%;
-  z-index: 1;
+  /* z-index: 1; */
 }
 
 input:checked + .slider:before {
@@ -83,7 +83,7 @@ img {
   height: 17px;
   left: 5.5px;
   top: 0;
-  bottom: 6px;
+  bottom: 8px;
   margin-top: auto;
   margin-bottom: auto;
   line-height: 0;
@@ -95,7 +95,7 @@ img {
   height: 17px;
   right: 12px;
   top: 0;
-  bottom: 6px;
+  bottom: 8px;
   margin-top: auto;
   margin-bottom: auto;
   line-height: 0;
